Removed deprecated classes and references